// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErpContainer renders correctly (default props) 1`] = `
<div
  className="content css-10fygt0-Content"
>
  <div
    className="css-ul982y-DetailViewHeader"
  >
    <button
      className="css-rmd9d0-Button"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-95j2hm-Button"
      >
        <div
          className="css-1lrzij5-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
        <div
          className="css-u7npei-DetailViewHeader"
        >
          sample_companies__filter_title
        </div>
      </div>
    </button>
    <div
      className="css-tqo6e0-DetailViewHeader"
    >
      erp__title_full
    </div>
    <div
      className="css-16tq2dx-DetailViewHeader"
    >
      <button
        className="css-1z0jetr-Button"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          preview
        </div>
      </button>
    </div>
  </div>
  <div
    className="content-container css-einjev-Content"
  >
    <div
      className="css-1oetcca-ErpView"
    >
      <a
        className="css-1mvp12i-ErpView"
        href="/backend/binary/erp/sample-company/a0a1da38-1abb-4757-aba9-d5c60e5bc05f"
      />
      <div
        className="css-19wbfsc-Card"
      >
        <div
          className="card-header css-15zaw2t-CardHeader"
        >
          <div
            className="css-mv0otu-TableOfContentsContainer"
          >
            <div
              className="css-1f6p2vj-Heading"
            >
              erp__title
            </div>
          </div>
          <div
            className="css-t84163-TableOfContentsContainer"
          >
            <div
              className="erp-navigation-checkbox css-j81lzu-ErpNavigation"
            >
              <div
                className="css-17zbm7y-Text"
              >
                erp__navigation_hide_placeholders
              </div>
              <div
                className="css-12kot9v-Checkbox"
              >
                <div
                  className="css-1k20ryc-Checkbox"
                >
                  <div
                    className="css-kb4bik-Checkbox"
                  >
                    <input
                      checked={false}
                      className="css-1gxpz9h-Checkbox"
                      disabled={false}
                      onChange={[Function]}
                      readOnly={false}
                      role="checkbox"
                      type="checkbox"
                    />
                    <div
                      className="css-xgozj0-Checkbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="toc-body css-awggpr-TableOfContentsContainer"
        >
          <div
            className="book-chapters-list css-1n23nny-TableOfContentsContainer"
          >
            <div
              className="css-18xeog2-TableOfContentsContainer"
            >
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      Company 1
                    </div>
                  </div>
                  <div
                    className="css-1p4ztl7-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_office
                    </div>
                  </div>
                  <div
                    className="css-1p4ztl7-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_application_spanning_components
                    </div>
                  </div>
                  <div
                    className="css-1p4ztl7-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_logistics
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_accounting
                    </div>
                  </div>
                  <div
                    className="css-1p4ztl7-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_staff
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_info_systems
                    </div>
                  </div>
                  <div
                    className="css-1p4ztl7-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_tools
                    </div>
                  </div>
                  <div
                    className="css-1p4ztl7-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_web_client_ui_framework
                    </div>
                  </div>
                  <div
                    className="css-1p4ztl7-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="card-footer css-1gfqsqp-CardFooter"
        >
          <div
            className="css-3lsagf-ErpNavigation"
          >
            <div
              className="css-1koh34k-NavFooterButton"
            >
              <div
                className="css-4vcym2-NavFooterButton"
                onClick={[Function]}
              >
                <div
                  className="css-18owz2d-NavFooterButton"
                >
                  <div
                    className="css-1pfqrtn-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
                <div
                  className="css-17zbm7y-Text"
                >
                  erp__navigation_import_excel_file
                </div>
              </div>
            </div>
            <div
              className="css-0"
            >
              <div
                className="css-4vcym2-NavFooterButton"
                onClick={[Function]}
              >
                <div
                  className="css-18owz2d-NavFooterButton"
                >
                  <div
                    className="css-1pfqrtn-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
                <div
                  className="css-17zbm7y-Text"
                >
                  erp__navigation_export_excel_file
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-18mbd1q-Card"
      >
        <div
          className="card-header css-7banf6-CardHeader"
        >
          <div
            className="css-4ggv51-ErpView"
          >
            <div
              className="css-o4b7ib-ErpView"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
            <div
              className="css-17zbm7y-Text"
            >
              erp__no_table
            </div>
          </div>
        </div>
        <div
          className="card-content css-1vyr92j-CardContent"
        >
          <div
            className="css-anw0y9-TablePlaceholder"
          >
            <div
              className="css-17zbm7y-Text"
            >
              erp__no_table_selected
            </div>
            <div
              className="css-owfm9q-TablePlaceholder"
            >
              <div
                className="css-a2d8j9-Text"
              >
                erp__no_table_select_hint
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErpContainer renders correctly (with preview) 1`] = `
<div
  className="content css-10fygt0-Content"
>
  <div
    className="css-ul982y-DetailViewHeader"
  >
    <button
      className="css-rmd9d0-Button"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-95j2hm-Button"
      >
        <div
          className="css-1lrzij5-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
        <div
          className="css-u7npei-DetailViewHeader"
        >
          sample_companies__filter_title
        </div>
      </div>
    </button>
    <div
      className="css-tqo6e0-DetailViewHeader"
    >
      erp__title_full
    </div>
    <div
      className="css-16tq2dx-DetailViewHeader"
    >
      <button
        className="css-1z0jetr-Button"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          preview
        </div>
      </button>
    </div>
  </div>
  <div
    className="content-container css-einjev-Content"
  >
    <div
      className="css-1oetcca-ErpView"
    >
      <a
        className="css-1mvp12i-ErpView"
        href="/backend/binary/erp/sample-company/a0a1da38-1abb-4757-aba9-d5c60e5bc05f"
      />
      <div
        className="css-19wbfsc-Card"
      >
        <div
          className="card-header css-15zaw2t-CardHeader"
        >
          <div
            className="css-mv0otu-TableOfContentsContainer"
          >
            <div
              className="css-1f6p2vj-Heading"
            >
              erp__title
            </div>
          </div>
          <div
            className="css-t84163-TableOfContentsContainer"
          >
            <div
              className="erp-navigation-checkbox css-j81lzu-ErpNavigation"
            >
              <div
                className="css-17zbm7y-Text"
              >
                erp__navigation_hide_placeholders
              </div>
              <div
                className="css-12kot9v-Checkbox"
              >
                <div
                  className="css-1k20ryc-Checkbox"
                >
                  <div
                    className="css-kb4bik-Checkbox"
                  >
                    <input
                      checked={false}
                      className="css-1gxpz9h-Checkbox"
                      disabled={false}
                      onChange={[Function]}
                      readOnly={false}
                      role="checkbox"
                      type="checkbox"
                    />
                    <div
                      className="css-xgozj0-Checkbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="toc-body css-awggpr-TableOfContentsContainer"
        >
          <div
            className="book-chapters-list css-1n23nny-TableOfContentsContainer"
          >
            <div
              className="css-18xeog2-TableOfContentsContainer"
            >
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      Company 1
                    </div>
                  </div>
                  <div
                    className="css-1p4ztl7-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_office
                    </div>
                  </div>
                  <div
                    className="css-1p4ztl7-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_application_spanning_components
                    </div>
                  </div>
                  <div
                    className="css-1p4ztl7-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_logistics
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_accounting
                    </div>
                  </div>
                  <div
                    className="css-1p4ztl7-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_staff
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_info_systems
                    </div>
                  </div>
                  <div
                    className="css-1p4ztl7-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_tools
                    </div>
                  </div>
                  <div
                    className="css-1p4ztl7-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="css-1ldtu9f-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                  onClick={[Function]}
                />
                <div
                  className="css-1ympzk2-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-ya6sn-TableOfContentsEntry"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1uyodls-Text"
                    >
                      erp__navigation_label_web_client_ui_framework
                    </div>
                  </div>
                  <div
                    className="css-1p4ztl7-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="card-footer css-1gfqsqp-CardFooter"
        >
          <div
            className="css-3lsagf-ErpNavigation"
          >
            <div
              className="css-1koh34k-NavFooterButton"
            >
              <div
                className="css-4vcym2-NavFooterButton"
                onClick={[Function]}
              >
                <div
                  className="css-18owz2d-NavFooterButton"
                >
                  <div
                    className="css-1pfqrtn-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
                <div
                  className="css-17zbm7y-Text"
                >
                  erp__navigation_import_excel_file
                </div>
              </div>
            </div>
            <div
              className="css-0"
            >
              <div
                className="css-4vcym2-NavFooterButton"
                onClick={[Function]}
              >
                <div
                  className="css-18owz2d-NavFooterButton"
                >
                  <div
                    className="css-1pfqrtn-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
                <div
                  className="css-17zbm7y-Text"
                >
                  erp__navigation_export_excel_file
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-18mbd1q-Card"
      >
        <div
          className="card-header css-7banf6-CardHeader"
        >
          <div
            className="css-4ggv51-ErpView"
          >
            <div
              className="css-o4b7ib-ErpView"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
            <div
              className="css-17zbm7y-Text"
            >
              erp__no_table
            </div>
          </div>
        </div>
        <div
          className="card-content css-1vyr92j-CardContent"
        >
          <div
            className="css-anw0y9-TablePlaceholder"
          >
            <div
              className="css-17zbm7y-Text"
            >
              erp__no_table_selected
            </div>
            <div
              className="css-owfm9q-TablePlaceholder"
            >
              <div
                className="css-a2d8j9-Text"
              >
                erp__no_table_select_hint
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1iw6hgd-Overlay"
    >
      <div
        className="css-16fesr1-OfficeWindow"
      >
        <div
          className="header css-1ydy459-OfficeWindow"
        >
          <div
            className="css-1sdua8l-ToolsHeader"
          >
            <div
              className="css-w2t5un-ToolsHeader"
            >
              <div
                className="css-1ss9q1q-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              <div
                className="css-1b4s2bm-Text"
              >
                erp__title_full
              </div>
            </div>
            <div
              className="css-w2t5un-ToolsHeader"
            >
              <button
                className="css-1dzgoe2-Button"
                disabled={false}
                onClick={[Function]}
                title="viewer_tools__close_tool_label"
              >
                <div
                  className="css-95j2hm-Button"
                >
                  <div
                    className="css-13zef26-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          className="css-wr2y4u-ErpPreview"
        >
          <div
            className="css-o8ndp3-ErpView"
          >
            <a
              className="css-1mvp12i-ErpView"
              href="/backend/binary/erp/sample-company/a0a1da38-1abb-4757-aba9-d5c60e5bc05f"
            />
            <div
              className="css-19wbfsc-Card"
            >
              <div
                className="card-header css-15zaw2t-CardHeader"
              >
                <div
                  className="css-mv0otu-TableOfContentsContainer"
                >
                  <div
                    className="css-1f6p2vj-Heading"
                  >
                    erp__title
                  </div>
                </div>
                <div
                  className="css-t84163-TableOfContentsContainer"
                />
              </div>
              <div
                className="toc-body css-awggpr-TableOfContentsContainer"
              >
                <div
                  className="book-chapters-list css-1n23nny-TableOfContentsContainer"
                >
                  <div
                    className="css-18xeog2-TableOfContentsContainer"
                  >
                    <div
                      className="toc-entry css-12opz0x-TableOfContentsEntry"
                    >
                      <div
                        className="css-1ldtu9f-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                        onClick={[Function]}
                      />
                      <div
                        className="css-1ympzk2-TableOfContentsEntry"
                        onClick={[Function]}
                      >
                        <div
                          className="css-ya6sn-TableOfContentsEntry"
                        >
                          <div
                            className="css-1lrzij5-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          <div
                            className="css-1uyodls-Text"
                          >
                            Company 1
                          </div>
                        </div>
                        <div
                          className="css-1p4ztl7-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div
                      className="toc-entry css-12opz0x-TableOfContentsEntry"
                    >
                      <div
                        className="css-1ldtu9f-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                        onClick={[Function]}
                      />
                      <div
                        className="css-1ympzk2-TableOfContentsEntry"
                        onClick={[Function]}
                      >
                        <div
                          className="css-ya6sn-TableOfContentsEntry"
                        >
                          <div
                            className="css-1lrzij5-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          <div
                            className="css-1uyodls-Text"
                          >
                            erp__navigation_label_office
                          </div>
                        </div>
                        <div
                          className="css-1p4ztl7-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div
                      className="toc-entry css-12opz0x-TableOfContentsEntry"
                    >
                      <div
                        className="css-1ldtu9f-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                        onClick={[Function]}
                      />
                      <div
                        className="css-1ympzk2-TableOfContentsEntry"
                        onClick={[Function]}
                      >
                        <div
                          className="css-ya6sn-TableOfContentsEntry"
                        >
                          <div
                            className="css-1lrzij5-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          <div
                            className="css-1uyodls-Text"
                          >
                            erp__navigation_label_application_spanning_components
                          </div>
                        </div>
                        <div
                          className="css-1p4ztl7-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div
                      className="toc-entry css-12opz0x-TableOfContentsEntry"
                    >
                      <div
                        className="css-1ldtu9f-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                        onClick={[Function]}
                      />
                      <div
                        className="css-1ympzk2-TableOfContentsEntry"
                        onClick={[Function]}
                      >
                        <div
                          className="css-ya6sn-TableOfContentsEntry"
                        >
                          <div
                            className="css-1lrzij5-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          <div
                            className="css-1uyodls-Text"
                          >
                            erp__navigation_label_logistics
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="toc-entry css-12opz0x-TableOfContentsEntry"
                    >
                      <div
                        className="css-1ldtu9f-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                        onClick={[Function]}
                      />
                      <div
                        className="css-1ympzk2-TableOfContentsEntry"
                        onClick={[Function]}
                      >
                        <div
                          className="css-ya6sn-TableOfContentsEntry"
                        >
                          <div
                            className="css-1lrzij5-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          <div
                            className="css-1uyodls-Text"
                          >
                            erp__navigation_label_accounting
                          </div>
                        </div>
                        <div
                          className="css-1p4ztl7-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div
                      className="toc-entry css-12opz0x-TableOfContentsEntry"
                    >
                      <div
                        className="css-1ldtu9f-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                        onClick={[Function]}
                      />
                      <div
                        className="css-1ympzk2-TableOfContentsEntry"
                        onClick={[Function]}
                      >
                        <div
                          className="css-ya6sn-TableOfContentsEntry"
                        >
                          <div
                            className="css-1lrzij5-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          <div
                            className="css-1uyodls-Text"
                          >
                            erp__navigation_label_staff
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="toc-entry css-12opz0x-TableOfContentsEntry"
                    >
                      <div
                        className="css-1ldtu9f-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                        onClick={[Function]}
                      />
                      <div
                        className="css-1ympzk2-TableOfContentsEntry"
                        onClick={[Function]}
                      >
                        <div
                          className="css-ya6sn-TableOfContentsEntry"
                        >
                          <div
                            className="css-1lrzij5-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          <div
                            className="css-1uyodls-Text"
                          >
                            erp__navigation_label_info_systems
                          </div>
                        </div>
                        <div
                          className="css-1p4ztl7-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div
                      className="toc-entry css-12opz0x-TableOfContentsEntry"
                    >
                      <div
                        className="css-1ldtu9f-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                        onClick={[Function]}
                      />
                      <div
                        className="css-1ympzk2-TableOfContentsEntry"
                        onClick={[Function]}
                      >
                        <div
                          className="css-ya6sn-TableOfContentsEntry"
                        >
                          <div
                            className="css-1lrzij5-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          <div
                            className="css-1uyodls-Text"
                          >
                            erp__navigation_label_tools
                          </div>
                        </div>
                        <div
                          className="css-1p4ztl7-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div
                      className="toc-entry css-12opz0x-TableOfContentsEntry"
                    >
                      <div
                        className="css-1ldtu9f-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                        onClick={[Function]}
                      />
                      <div
                        className="css-1ympzk2-TableOfContentsEntry"
                        onClick={[Function]}
                      >
                        <div
                          className="css-ya6sn-TableOfContentsEntry"
                        >
                          <div
                            className="css-1lrzij5-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          <div
                            className="css-1uyodls-Text"
                          >
                            erp__navigation_label_web_client_ui_framework
                          </div>
                        </div>
                        <div
                          className="css-1p4ztl7-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="card-footer css-1gfqsqp-CardFooter"
              />
            </div>
            <div
              className="css-18mbd1q-Card"
            >
              <div
                className="card-header css-7banf6-CardHeader"
              >
                <div
                  className="css-4ggv51-ErpView"
                >
                  <div
                    className="css-o4b7ib-ErpView"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                  <div
                    className="css-17zbm7y-Text"
                  >
                    erp__no_table
                  </div>
                </div>
              </div>
              <div
                className="card-content css-1vyr92j-CardContent"
              >
                <div
                  className="css-anw0y9-TablePlaceholder"
                >
                  <div
                    className="css-17zbm7y-Text"
                  >
                    erp__no_table_selected
                  </div>
                  <div
                    className="css-owfm9q-TablePlaceholder"
                  >
                    <div
                      className="css-a2d8j9-Text"
                    >
                      erp__no_table_select_hint
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-pystkl-OfficeWindow"
        />
      </div>
    </div>
  </div>
</div>
`;
